--- a/source/index.html
+++ b/source/index.html
@@ -8,12 +8,12 @@
   <body class="page__body">
     <header class="page-header page-header--index">
       <a class="page-header__logo logo">
-        <img class="logo__image" src="#" width="185" height="96" alt="Логотип города Седона">
+        <img class="logo__image" src="./img/logo-mobile.svg" width="185" height="96" alt="Логотип города Седона">
       </a>
       <nav class="page-header__main-nav main-nav main-nav--closed container">
         <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--active">
+          <li class="main-nav__item main-nav__item--active main-nav__item--drop-shadow">
             <a class="main-nav__link">Главная</a>
           </li>
           <li class="main-nav__item">
@@ -22,13 +22,13 @@
           <li class="main-nav__item">
             <a class="main-nav__link" href="form.html">Форма отзыва</a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__item main-nav__item--inner-shadow main-nav__item--gradient">
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
         <div class="page-header__promo promo promo--index container">
           <h1 class="promo__page-title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-          <img class="promo__slogan-image" src="#" width="282" height="214" alt="Welcome to the Gorgeous. Sedona. Because the Grand Canyon sucks!">
+          <img class="promo__slogan-image" src="./img/slogan-index.svg" width="282" height="214" alt="Welcome to the Gorgeous. Sedona. Because the Grand Canyon sucks!">
         </div>
       </nav>
     </header>
@@ -88,7 +88,7 @@
         <div class="service__wrapper container">
           <b class="service__intro">Заинтересовались?</b>
           <p class="service__description description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="service__find-hotel-button button" href="#">Найти гостиницу</a>
+          <a class="service__find-hotel-button button" href="#" target="_blank">Найти гостиницу</a>
         </div>
       </section>
 
